--- a/freemarker/pom.xml
+++ b/freemarker/pom.xml
@@ -20,8 +20,8 @@
 			<artifactId>hp-core-common</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>freemarker</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
 	</dependencies>
 </project>
