--- a/database/pom.xml
+++ b/database/pom.xml
@@ -24,8 +24,8 @@
 			<artifactId>javax.persistence-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
