--- a/database/pom.xml
+++ b/database/pom.xml
@@ -43,6 +43,10 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.yaml</groupId>
