--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
 		<commons-beanutils.version>1.9.4</commons-beanutils.version>
 		<commons-fileupload-version>1.4</commons-fileupload-version>
 		<poi-version>4.1.2</poi-version>
+		<druid-spring-boot-starter.version>1.1.23</druid-spring-boot-starter.version>
+		<mybatis-spring-boot-starter.version>2.1.3</mybatis-spring-boot-starter.version>
 	</properties>
 
 	<dependencyManagement>
@@ -43,6 +45,14 @@
 				<artifactId>commons-io</artifactId>
 				<version>${commons-io.version}</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>org.mybatis.spring.boot</groupId>
+				<artifactId>mybatis-spring-boot-starter</artifactId>
+				<version>${mybatis-spring-boot-starter.version}</version>
+			</dependency>
+			
+			
 			<dependency>
 				<groupId>org.mybatis</groupId>
 				<artifactId>mybatis</artifactId>
@@ -125,6 +135,16 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
 				<version>${poi-version}</version>
+			</dependency>
+			<!-- <dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid</artifactId>
+				<version>${alibaba.druid.version}</version>
+			</dependency> -->
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid-spring-boot-starter</artifactId>
+				<version>${druid-spring-boot-starter.version}</version>
 			</dependency>
 
 			
